--- a/.spectrwm.conf
+++ b/.spectrwm.conf
@@ -113,7 +113,7 @@ modkey = Mod4
 
 # Validated default programs:
 program[lock]		= xsecurelock
-program[term]		= lxterminal
+program[term]		= xfce4-terminal
 program[menu]		= dmenu_run
 
 # To disable validation of the above, free the respective binding(s):
@@ -131,7 +131,7 @@ program[menu]		= dmenu_run
 # bind[firefox]		= MOD+Shift+b
 
 #apps shortcut
-program[pcmanfm]=pcmanfm
+program[pcmanfm]=thunar
 bind[pcmanfm]=MOD+Shift+f
 
 program[chromium]=chromium
